force-app/main/default/objects/Deleted_Record__c/Deleted_Record__c.object-meta.xml
<CustomObject>
    <description>A record of all the deleted records, and reasons why they were deleted.</description>
    <label>Deleted Record</label>
    <nameField>
        <displayFormat>DR-{000000}</displayFormat>
        <label>Deleted Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deleted Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>