force-app/main/default/objects/Deleted_Record__c/fields/Delete_Reason__c.field-meta.xml
<CustomField>
    <fullName>Delete_Reason__c</fullName>
    <description>The reason the record was deleted</description>
    <inlineHelpText>The reason the record was deleted</inlineHelpText>
    <label>Delete Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guest Consent Decline</fullName>
            </value>
            <value>
                <fullName>User Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>