force-app/main/default/objects/Deleted_Record__c/fields/Deleted_By_User__c.field-meta.xml
<CustomField>
    <fullName>Deleted_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user that deleted the record.</description>
    <inlineHelpText>The user that deleted the record.</inlineHelpText>
    <label>Deleted By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deleted_Records</relationshipName>
    <type>Lookup</type>
</CustomField>