force-app/main/default/objects/Deleted_Record__c/fields/Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Object_ID__c</fullName>
    <description>The ID of the record that was deleted</description>
    <inlineHelpText>The ID of the record that was deleted</inlineHelpText>
    <label>Object ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>