force-app/main/default/objects/Deleted_Record__c/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <description>The type of object that was deleted</description>
    <inlineHelpText>The type of object that was deleted</inlineHelpText>
    <label>Object Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VIP Guest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>